# material-react-mobx/src/views/LoginPage/LoginPage.js
@@ -1,6 +1,4 @@
 import React from "react";
-import { Redirect} from 'react-router-dom';
-
 // @material-ui/core components
 import { makeStyles } from "@material-ui/core/styles";
 import InputAdornment from "@material-ui/core/InputAdornment";
@@ -20,139 +18,55 @@ import CardBody from "components/Card/CardBody.js";
 import CardHeader from "components/Card/CardHeader.js";
 import CardFooter from "components/Card/CardFooter.js";
 import CustomInput from "components/CustomInput/CustomInput.js";
-
-import styles from "assets/jss/material-kit-react/views/loginPage.js";
-
-import localimage from 'assets/img/local.png';
-import naverimage from 'assets/img/naver.png';
-import facebookimage from 'assets/img/facebook.png';
-import kakaoimage from 'assets/img/kakao.png';
-import googleimage from 'assets/img/google.png';
-
 import GoogleIcon from 'assets/img/sns/google.png';
 import FaceIcon from 'assets/img/sns/face.png';
 import KakaoIcon from 'assets/img/sns/kakao.png';
 import NaverIcon from 'assets/img/sns/naver.png';
-import Collapse from '@material-ui/core/Collapse';
-import image from "assets/img/bg2.jpg";
+import styles from "assets/jss/material-kit-react/views/loginPage.js";
+import FontButton from "@material-ui/core/Button";
+import image from "assets/img/bg7.jpg";
+import Divider from '@material-ui/core/Divider';
+import CloseIcon from "@material-ui/icons/HighlightOff";
 import axios from 'axios';
-import TextField from '@material-ui/core/TextField';
-import Grid from '@material-ui/core/Grid';
-import Link from '@material-ui/core/Link';
-
 const useStyles = makeStyles(styles);
 
 export default function LoginPage(props) {
-
   const [cardAnimaton, setCardAnimation] = React.useState("cardHidden");
-  const [loginId, setLoginId] = React.useState('');
-  const [loginPw, setLoginPw] = React.useState('');
-  const [check, setCheck] = React.useState("N");
-  const [openNum, setOpenNum] = React.useState(false);
-  const [scTitle, setScTitle] = React.useState("인증번호전송");
- 
-  
   setTimeout(function() {
     setCardAnimation("");
   }, 700);
   const classes = useStyles();
   const { ...rest } = props;
+  const [email,setEmail] = React.useState();
+  const [password,setPassword] = React.useState();
 
-  //인증번호 입력 폼
-  const  handleSendNum = () => {
-	   setScTitle("인증번호 재전송");
-	   setOpenNum(true);
+  const submit = () => {
+
+	   if(email != "" && password != "") {
+		   axios.post("/auth/login", {id : email, pw : password,})
+		    .then(res => {
+
+		        if (res.data.message) alert(res.data.message);
+		        else props.onClose(); //alert(res.data.userid + " 로그인 성공");
+		       // else window.location.href ="/";
+		    })
+		    .catch(err => {
+		        console.log(err);
+		    })
+	   } else {
+		   if(email == "") {
+			   alert("로그인 아이디 는 필수 입력 값입니다.");
+		   } else {
+			   alert("로그인 패스워드는 필수 입력 값입니다.");
+		   }
+		   
+	   }
+    
   };
-  
-  const onChangeIDValue = (event) => {
-	  console.log (">>>>ID:"+event.target.value);
-	  setLoginId(event.target.value);
 
-  };
-  
-  const onChangePWValue = (event) => {
 
-	  setLoginPw(event.target.value);
-
-  };
-  
-  const handleClick = () => {
-
-	  alert(">>id:"+loginId+"pw:"+loginPw);
-	 // componentDidMount(loginId,loginPw);
-
-	/* if (check != "Y") {
-		 window.location.href = "/own/tracking";
-	 } else {
-		 alert("로그인 정보를 확인해 주세요.");
-	 }  */
-	  try{
-		  //login({loginId,loginPw});
-	  } catch(e) {
-		  alert("failed to login");
-		  setLoginId('');
-		  setLoginPw('');
-	  }
-  };
-  
-  //const {from} = location.state || { from : {pathname:"/"}};
-  //if(authenticated) return <Redirect to={from} />; 
-  		
-  const componentDidMount = (id,pw) => {
-	  
-	  return axios ({
-			// url:'/api/getUserInfoSample',
-			url:'/login',
-			method:'POST',
-			data: {id : id,pw : pw,}
-    }).then(response => setCheck("Y"));
-      
-   }
-
-   const login = () => {
-
-    axios.post("/auth/login", {id : loginId, pw : loginPw,})
-    .then(res => {
-        console.log(res);
-        if (res.data.message) alert(res.data.message);
-        else alert(res.data.userid + " 로그인 성공");
-    })
-    .catch(err => {
-        console.log(err);
-    })
-  }
-  
-  //  const kakao = () => {
-
-  //   axios.get("/auth/login/kakao", {id : loginId, pw : loginPw,})
-  //   .then(res => {
-  //       console.log(res);
-  //       if (res.data.message) alert(res.data.message);
-  //       else alert(res.data.userid + " 로그인 성공");
-  //   })
-  //   .catch(err => {
-  //       console.log(err);
-  //   })
-  // }
-  
-
-  // const responseKakao = () => {
-  //   // console.log(res);
-  // }
-  
-  // const responseFail = () => {
-  //   // console.log(err);
-  // }
-  
   return (
     <div>
-      <Header
-        absolute
-        color="transparent"
-        brand="Plism+"
-        rightLinks={<HeaderLinks />}
-        {...rest}
-      />
       <div
         className={classes.pageHeader}
         style={{
@@ -161,74 +75,111 @@ export default function LoginPage(props) {
           backgroundPosition: "top center"
         }}
       >
-        <div className={classes.container}>
+        <div className={classes.container} style={{width:'auto'}}>
+          <GridContainer justify="center">
             <GridItem xs={12} sm={12} md={4}>
               <Card className={classes[cardAnimaton]}>
-                <form className={classes.form}>
-                  <CardHeader color="primary" className={classes.cardHeader}>
-                    <h4>PassWord Find</h4>
+                <div style={{textAlign:'right',marginTop:'5px',marginRight:'5px'}}>
+                  <CloseIcon  onClick={()=>props.onClose()}/>
+                </div>
+                  <CardHeader color="info" className={classes.cardHeader} style={{marginTop:'-60px',marginLeft:'30px',marginRight:'30px'}}>
+                    <h4>Login</h4>
                   </CardHeader>
-                  <p className={classes.divider}>회원가입시 입력하셨던 이메일과 이름, 연락처를 입력해주세요.</p>
-                  <CardBody>
-                  <TextField id="userEmail" label="Email Address" type="text" fullWidth />
-                  <TextField id="userName" label="Name" type="text" fullWidth />
-            		<Grid container spacing={1}>
-	                	<Grid item xs={12} sm={12} md={7} style={{height:'48px'}}>
-	                		<TextField id="userPhone" label="Phone" type="text" placeholder="'-' 제외 하고 입력해주세요." fullWidth />
-	                	</Grid>
-	                	<Grid item xs={12} sm={12} md={1}>
-                        	<Button  style={{minWidth:'100px'}} color="info" onClick={handleSendNum} fullWidth>{scTitle}</Button>
-                        </Grid>
-                    </Grid>
-		            <Collapse in={openNum} timeout="auto" unmountOnExit>
-              			<TextField id="reNumber" placeholder="인증번호를 입력해주세요" type="text" fullWidth />
-	                </Collapse>
+                  <CardBody style={{paddingTop:'0px'}}>
+                    <CustomInput
+                      labelText="Email Address"
+                      id="email"
+                      formControlProps={{
+                        fullWidth: true
+                      }}
+                      inputProps={{
+                        type: "email",
+                        endAdornment: (
+                          <InputAdornment position="end">
+                            <Email className={classes.inputIconsColor} />
+                          </InputAdornment>
+                        ),
+                        onChange:({target:{value} }) => setEmail(value)
+                      }}
+                    />
+                    <CustomInput
+                      labelText="Password"
+                      id="pass"
+                      formControlProps={{
+                        fullWidth: true
+                      }}
+                      inputProps={{
+                        type: "password",
+                        endAdornment: (
+                          <InputAdornment position="end">
+                            <Icon className={classes.inputIconsColor}>
+                              lock_outline
+                            </Icon>
+                          </InputAdornment>
+                        ),
+                        autoComplete: "off",
+                        onChange:({target:{value} }) => setPassword(value)
+                      }}
+                    />
+                    <CardFooter style={{margin:'0px',padding:'0px'}}>
+                       <FontButton  size="small" style={{lineHeight:'initial',fontWeight:'blod'}} >
+                         <font color="#3f51b5" style={{textDecoration:'underline'}}>Forgot password?</font>
+                      </FontButton>
+				         		</CardFooter>
+                     <CardFooter style={{margin:'0px'}}>
+                      <Button simple color="info" size="lg" style={{paddingTop:'0px',paddingBottom:'0px'}} onClick={submit} fullWidth>Get started</Button>
+				         		</CardFooter>
+                    <Divider />
+                    <GridItem xs={12} style={{marginTop:'5px',marginLeft:'20px',marginRight:'20px'}}>
+                      <div className="button-container">
+                                  <Button
+                                    style={{backgroundColor:'white',borderRadius:'30px',borderStyle:'solid',borderColor:'#ffe812',color:'#6f6e6e',placeContent:'initial',margin:'3px',height:'48px',paddingLeft:'10px'}}
+                                    href="https://kauth.kakao.com/oauth/authorize?client_id=0b6d98316119442e856dd2ad7497df14&redirect_uri=http://localhost:5000/auth/kakao/callback&response_type=code&state=12345"
+                                    target="_blank"
+                                    fullWidth
+                                  >&nbsp;&nbsp;<img src={KakaoIcon} alt="카카오SNS" width="40" height="40"></img>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Kakao Login
+                                  </Button>
+                      </div>
+                      <div className="button-container">
+                                  <Button
+                                  style={{backgroundColor:'white',borderRadius:'30px',borderStyle:'solid',borderColor:'#1EC800',color:'#6f6e6e',placeContent:'initial',margin:'3px',height:'48px',paddingLeft:'10px'}}
+                                    fullWidth
+                                    href="https://nid.naver.com/oauth2.0/authorize?client_id=5vSPppBEGLWEwMT8p9kZ&redirect_uri=http://localhost:5000/auth/naver/callback&response_type=code&state=12345"
+                                    target="_blank"
+                                  >&nbsp;&nbsp;<img src={NaverIcon} alt="네이버SNS" width="40" height="40"></img>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Naver Login
+                                  </Button>
+                                </div>
+                                  <div className="button-container">
+                                    <Button
+                                      style={{backgroundColor:'white',borderRadius:'30px',borderStyle:'solid',borderColor:'#3b5998',color:'#6f6e6e',placeContent:'initial',margin:'3px',height:'48px',paddingLeft:'10px'}}
+                                      href="https://www.facebook.com/v5.0/dialog/oauth?client_id=184064786168643&redirect_uri=http://localhost:5000/auth/facebook/callback&response_type=code&state=12345"
+                                      target="_blank"
+                                      fullWidth
+                                    >&nbsp;&nbsp;<img src={FaceIcon} alt="페이스북SNS" width="40" height="40"></img>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;FaceBook Login
+                                    </Button>
+                                  </div>
+                                <div className="button-container">
+                                  <Button
+                                    style={{backgroundColor:'white',borderColor:'red',borderRadius:'30px',borderStyle:'solid',borderColor:'#db3236',color:'#6f6e6e',placeContent:'initial',margin:'3px',height:'48px',paddingLeft:'10px'}}
+                                    fullWidth
+                                    href="https://accounts.google.com/o/oauth2/v2/auth?client_id=684197542136-kkba8s7e8a1l6pnqdio46vgdgkfkhsmn.apps.googleusercontent.com&redirect_uri=http://localhost:5000/auth/google/callback&response_type=code&scope=profile&state=12345"
+                                    target="_blank"
+                                  >&nbsp;&nbsp;<img src={GoogleIcon} alt="구글SNS" width="40" height="40"></img>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Google Login
+                                  </Button>
+                                  </div>
+                        </GridItem>
+                    <CardFooter style={{margin:'0px'}}>
+                      New Here? 
+                      <FontButton  size="small" style={{lineHeight:'initial',fontWeight:'blod'}} >
+                        <font color="#3f51b5" style={{textDecoration:'underline'}}>Create an account</font>
+                      </FontButton>
+				         		</CardFooter>
                   </CardBody>
-                  <CardFooter className={classes.cardFooter}>
-                  
-		             <Button color="primary" size="lg" onClick={handleClick}>
-		               Get started
-		             </Button>
-                  </CardFooter>
-		          <CardFooter>
-         			New Here? <Link to="/own/register">Create an account</Link>
-         			</CardFooter>
-                </form>
               </Card>
             </GridItem>
-
+          </GridContainer>
         </div>
-        <Footer whiteFont />
       </div>
     </div>
   );
 }
-
-
-class LoginCheck extends React.Component {
-	
-	  state = { expanded: false , port: []};
-
-	  componentDidMount() {
-		  console.log(">>>>");
-		  return axios ({
-				url:'/api/getScheduleDetailList',
-				method:'POST',
-				data: {carrierCode : this.props.data.LINE_CODE,
-					   startPort : this.props.data.START_PORT,
-					   endPort : this.props.data.END_PORT,
-					   voyage : this.props.data.VOYAGE_NO,
-					   vesselName : this.props.data.VESSEL_NAME
-					   }
-			}).then(response => this.setState({port:response.data }));
-		  }
-
-	  render() {
-
-	     const { port } = this.state;
-
-	    return [
-	      
-	    ];
-	  }
-	}
